<?xml version="1.0" encoding="UTF-8"?>
<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://maven.apache.org/POM/4.0.0"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>at.jku.cps</groupId>
    <artifactId>travart-core</artifactId>
    <version>2.0.0</version>
    <properties>
        <maven.compiler.source>21</maven.compiler.source>
        <maven.compiler.target>21</maven.compiler.target>
        <javadoc.disabled>true</javadoc.disabled>
        <deploy.disabled>true</deploy.disabled>
        <source.disabled>true</source.disabled>
        <checkstyle-maven-plugin.version>3.6.0</checkstyle-maven-plugin.version>
    </properties>

	<repositories>
		<repository>
			<id>travart-lib-static</id>
			<url>file://${project.basedir}/lib</url>
		</repository>
	</repositories>

	<dependencies>
		<!-- https://mvnrepository.com/artifact/org.pf4j/pf4j -->
		<dependency>
			<groupId>org.pf4j</groupId>
			<artifactId>pf4j</artifactId>
			<version>3.14.0</version>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>io.github.universal-variability-language</groupId>
			<artifactId>uvl-parser</artifactId>
			<version>0.3</version>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>io.github.universal-variability-language</groupId>
			<artifactId>uvl-metamodel</artifactId>
			<version>1.0</version>
		</dependency>
		<!-- https://mvnrepository.com/artifact/org.apache.logging.log4j/log4j-core -->
		<dependency>
			<groupId>org.apache.logging.log4j</groupId>
			<artifactId>log4j-core</artifactId>
			<version>2.25.2</version>
		</dependency>
		<dependency>
			<groupId>org.logicng</groupId>
			<artifactId>logicng-j11</artifactId>
			<version>2.4.3</version>
		</dependency>
		<dependency>
			<groupId>de.ovgu.featureide</groupId>
			<artifactId>lib.fm</artifactId>
			<version>3.10.0</version>
		</dependency>
		<dependency>
			<groupId>org.opt4j</groupId>
			<artifactId>opt4j-satdecoding</artifactId>
			<version>3.1.4</version>
		</dependency>
		<dependency>
			<groupId>info.picocli</groupId>
			<artifactId>picocli</artifactId>
			<version>4.7.7</version>
		</dependency>
	</dependencies>

	<build>
		<resources>
			<resource>
				<filtering>false</filtering>
				<directory>src/main/java</directory>
				<includes>
					<include>**/*.java</include>
				</includes>
			</resource>
			<resource>
				<filtering>false</filtering>
				<directory>.</directory>
				<includes>
					<include>LICENSE</include>
				</includes>
			</resource>
		</resources>
		<plugins>
			<plugin>
				<artifactId>maven-deploy-plugin</artifactId>
				<configuration>
					<skip>true</skip>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-checkstyle-plugin</artifactId>
				<version>${checkstyle-maven-plugin.version}</version>
				<configuration>
					<configLocation>${project.basedir}/checkstyle.xml</configLocation>
				</configuration>
				<executions>
					<execution>
						<goals>
							<goal>check</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
		</plugins>
	</build>
</project>
